--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,7 @@
 # Make sure the push/PR passes linting and able to build
-# TODO: add ENV_VAR
-name: Build
+name: Lint on PR
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -21,8 +20,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
     - run: yarn lint
-    - run: yarn build
 
 
 
-    
