--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^9.0.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^3.5.0",
