--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "riva",
+  "name": "gatsby-template",
   "version": "1.0.0",
   "private": true,
-  "description": "RIVA",
+  "description": "Gatsby Template",
   "author": "Nandi Wong",
   "keywords": [
     "gatsby"
@@ -23,16 +23,20 @@
     "babel-plugin-styled-components": "^1.12.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^9.0.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^3.5.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-sitemap": "^4.1.0",
     "gatsby-plugin-styled-components": "^4.5.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
     "i18next": "^20.2.4",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
