⚙️fix: linting and prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "endOfLine": "lf",
   "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "trailingComma": "all"
 }
