--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@emotion/react": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
     "@types/react-helmet": "^6.1.1",
     "@types/styled-components": "^5.1.9",
@@ -26,14 +27,14 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "gatsby": "^3.4.1",
+    "gatsby": "^4.22.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-google-analytics": "^3.5.0",
+    "gatsby-plugin-google-analytics": "^4.22.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^3.5.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-sitemap": "^4.1.0",
+    "gatsby-plugin-manifest": "^4.22.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^5.22.0",
+    "gatsby-plugin-sitemap": "^5.22.0",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
@@ -45,7 +46,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.15",
     "styled-components": "^5.3.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
