--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,37 +12,38 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 14.x
+          - 16.x
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn lint
-    - run: yarn build
-      env:
-        # Put your environment variables here
-        NODE_ENV: production
-        LOCALE_GSPREADSHEET_PUBLISHED_URL: https://docs.google.com/spreadsheets/d/e/2PACX-1vRY0w0FlbZiubTEwsQzEszdw0tkuD0FbQTE4nAqDlmtdUJHVIHGYUt56mo7I6zt7F41dUv2XnXORMvA/pub?gid=0&single=true&output=csv
-        GOOGLE_ANALYTICS_ID: UA-1111111-1
-        SITE_URL: http://localhost:8000
-    # This is the default configuration that would deploy to gh_pages 
-    # Check the configuration here https://github.com/peaceiris/actions-gh-pages
-    - name: Deploy to Github Page
-      uses: peaceiris/actions-gh-pages@v3
-      with:      
-        publish_dir: ./public
-        keep_files: true
-        # GitHub Actions runner automatically creates a GITHUB_TOKEN secret to use in your workflow. 
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        # 
-        # If you want to push to another respository other than this one
-        # personal_token: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
-        # external_repository: vote4hk/wars.vote4.hk
-        # 
-        # If you want to host with your custom domain 
-        # cname: [YOUR_DOMAIN]
-
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: 🔨 Installing
+        run: yarn install
+      - name: ✨ Linting
+        run: yarn lint
+      - name: 🚜 Building
+        run: yarn build
+        env:
+          # Put your environment variables here
+          NODE_ENV: production
+          GOOGLE_ANALYTICS_ID: UA-1111111-1
+          SITE_URL: http://localhost:8000
+      # This is the default configuration that would deploy to gh_pages
+      # Check the configuration here https://github.com/peaceiris/actions-gh-pages
+      - name: 🚢 Deploying to Github Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: ./public
+          keep_files: true
+          # GitHub Actions runner automatically creates a GITHUB_TOKEN secret to use in your workflow.
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          #
+          # If you want to push to another respository other than this one
+          # personal_token: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
+          # external_repository: vote4hk/wars.vote4.hk
+          #
+          # If you want to host with your custom domain
+          # cname: [YOUR_DOMAIN]
