--- a/package.json
+++ b/package.json
@@ -17,58 +17,48 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.2",
-    "@types/react-helmet": "^6.1.1",
-    "@types/styled-components": "^5.1.9",
-    "babel-plugin-styled-components": "^1.12.0",
-    "csvtojson": "^2.0.10",
-    "dotenv": "^9.0.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "gatsby": "^4.22.0",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
+    "gatsby": "^4.24.3",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-google-analytics": "^4.22.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^4.22.0",
-    "gatsby-plugin-material-ui": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^5.22.0",
-    "gatsby-plugin-sitemap": "^5.22.0",
-    "gatsby-plugin-styled-components": "^4.5.0",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-sharp": "^3.6.0",
-    "i18next": "^20.2.4",
+    "gatsby-plugin-disqus": "^1.2.4",
+    "gatsby-plugin-emotion": "^7.24.0",
+    "gatsby-plugin-google-analytics": "^4.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-theme-material-ui": "^5.3.0",
+    "gatsby-transformer-remark": "^5.24.0",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.6.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "moment": "^2.29.4",
+    "prettier": "^2.7.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^11.8.15",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.6",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-config-react-app": "^6.0.0",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
-    "typescript": "^4.1.3"
+    "husky": "^8.0.1",
+    "typescript": "^4.8.3"
+  },
+  "resolutions": {
+    "gatsby/eslint-plugin-import": "2.22.1",
+    "gatsby/@typescript-eslint/eslint-plugin": "5.39.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn lint-staged"
     }
   }
 }
